--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <ul>
                         <li><a href="#"><i class="fa-solid fa-heart-circle-plus"></i></a></li>
                         <li><a href="#"><i class="fa-regular fa-bookmark"></i></a></li>
-                        <li><a href="#"><i class="fa-regular fa-star"></i></a></li>
+                        <li><a href="actorsGallery.html" target="_blank"><i class="fa-regular fa-star"></i></a></li>
                     </ul>
 
                 </div>
